# yocore

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  book.toml
.claude/commands/: release.md
.claude/skills/: release.md
.githooks/: pre-commit
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: SUMMARY.md  introduction.md  mdns-discovery.md  troubleshooting.md
docs/architecture/: database-schema.md  overview.md
docs/getting-started/: claude-code-integration.md  ephemeral-mode.md  first-run.md  installation.md  long-term-memory.md  minimal-setup.md  yo-memory.md
docs/guides/: ai-features.md  lan-discovery.md  memory-system.md
docs/reference/: cli.md  configuration.md  http-api.md  mcp-tools.md  sse-events.md
docs/theme/: custom.css
examples/: test_ranking.rs
npm/: README.md  package.json
npm/scripts/: postinstall.js
src/: config.rs  error.rs  lib.rs  main.rs  mdns.rs
src/ai/: auto_trigger.rs  cli.rs  export.rs  marker.rs  memory.rs  mod.rs  queue.rs  ranking.rs  similarity.rs  skill.rs  title.rs  types.rs
src/api/: auth.rs  config_routes.rs  context_routes.rs  export_routes.rs  mod.rs  routes.rs  sse.rs
src/db/: mod.rs  schema.rs
src/embeddings/: mod.rs
src/ephemeral/: mod.rs
src/handlers/: memory.rs  mod.rs  sessions.rs
src/mcp/: db.rs  handlers.rs  mod.rs  protocol.rs  types.rs
src/parser/: claude_code.rs  common.rs  mod.rs  openclaw.rs  types.rs
src/scheduler/: mod.rs
src/scheduler/tasks/: duplicate_cleanup.rs  embedding_refresh.rs  mod.rs  ranking.rs  skill_cleanup.rs
src/watcher/: mod.rs  storage.rs  store.rs
theme/: head.hbs
