[package]
name = "yocore"
version = "0.2.0"
description = "Yocore - headless service for watching, parsing, storing, and serving AI coding sessions"
authors = ["Yolog Team"]
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/yologdev/yocore"
keywords = ["ai", "coding", "sessions", "archive", "mcp"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "yocore"
path = "src/lib.rs"

[[bin]]
name = "yocore"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP server
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1", features = ["full"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "process", "time", "sync", "macros", "signal", "fs"] }
futures = "0.3"

# Embeddings for vector search
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.21"
hf-hub = "0.4"

# File watching
notify = "6.1"
notify-debouncer-mini = "0.4"

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Configuration
toml = "0.8"

# Directories
dirs = "5"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Regex for parsing
regex = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Async channels for SSE
tokio-stream = { version = "0.1", features = ["sync"] }

# mDNS/Bonjour service discovery
mdns-sd = "0.11"
hostname = "0.4"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
